testdata/prettier/w-matrix-delcaration-exp-second.out
Lexical/Parse error: "./testdata/prettier/w-matrix-delcaration-exp-second.goat" (line 2, column 11):
unexpected *
