testdata/prettier/w-matrix-delcaration-exp-second.goat
proc main()
int a[2, 2*3];
begin
  write "Test\n";
end
